--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.2",
     "react-dom": "17.0.2",
+    "save": "^2.4.0",
     "styled-components": "^5.3.3",
     "webfontloader": "^1.6.28"
   },
