--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
+    "start": "next start -p $PORT",
     "lint": "next lint"
   },
   "dependencies": {
@@ -15,11 +15,13 @@
     "@mui/icons-material": "^5.4.2",
     "@mui/material": "^5.4.2",
     "@mui/styled-engine-sc": "^5.4.2",
+    "chart.js": "^3.7.1",
     "hstore": "^0.0.1",
     "next": "^12.0.10",
     "pg": "^8.7.3",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.2",
+    "react-chartjs-2": "^4.0.1",
     "react-dom": "17.0.2",
     "save": "^2.4.0",
     "styled-components": "^5.3.3",
